Added - Birthcountry field in the res_partner_view - Start date and end date for school_year - Missing code in _compute_speciality for cycle - Typology for title access - Logic to display typologies in diploma supplement - List of countries for title access, erasmus and internships - Logic to display country for title access in diploma supplement

--- a/custom_partner_fields/views/res_partner_view.xml
+++ b/custom_partner_fields/views/res_partner_view.xml
@@ -26,8 +26,10 @@
                                 <field name="title" />
                                 <field name="establishment" />
                                 <field name="city" />
-                                <field name="country" />
+                                <field name="country_id" />
                                 <field name="date" />
+                                <field name="type" />
+                                <field name="country" />
                             </tree>
                         </field>
                     </group>
@@ -44,19 +46,21 @@
                             <tree>
                                 <field name="establishment" />
                                 <field name="city" />
-                                <field name="country" />
+                                <field name="country_id" />
                                 <field name="start_date" />
                                 <field name="end_date" />
+                                <field name="country" />
                             </tree>
                         </field>
                         <field name="erasmus_ids" mode="tree">
                             <tree>
                                 <field name="establishment" />
                                 <field name="city" />
-                                <field name="country" />
+                                <field name="country_id" />
                                 <field name="start_date" />
                                 <field name="end_date" />
                                 <field name="language" />
+                                <field name="country" />
                             </tree>
                         </field>
                     </group>
