--- a/school_management/views/configuration_view.xml
+++ b/school_management/views/configuration_view.xml
@@ -45,6 +45,10 @@
                                 <field name="previous" />
                                 <field name="next" />
                             </group>
+                            <group>
+                                <field name="startdate" />
+                                <field name="enddate" />
+                            </group>
                         </group>
                     </sheet>
                 </form>
