--- a/school_prerequisits/views/program_view.xml
+++ b/school_prerequisits/views/program_view.xml
@@ -36,13 +36,55 @@
             </field>
         </record>
 
+        <record id="view_prerequisit_filter" model="ir.ui.view">
+            <field name="name">prerequisit.select</field>
+            <field name="model">school.prerequisit</field>
+            <field name="arch" type="xml">
+                <search string="Search Prerequisit">
+                    <field
+                        name="name"
+                        filter_domain="['|',('course_id.name','ilike',self),('course_id.uid','ilike',self)]"
+                    />
+                    <filter
+                        string="Current Year"
+                        name="current"
+                        domain="[('course_id.bloc_ids.year_sequence','=','current')]"
+                    />
+                    <filter
+                        string="Previous Year"
+                        name="previous"
+                        domain="[('course_id.bloc_ids.year_sequence','=','previous')]"
+                    />
+                    <filter
+                        string="Next Year"
+                        name="next"
+                        domain="[('course_id.bloc_ids.year_sequence','=','next')]"
+                    />
+                    <separator />
+                    <filter
+                        name="music"
+                        string="Musique"
+                        domain="[('course_id.bloc_ids.speciality_id.domain_id', 'ilike','MUSIQUE')]"
+                    />
+                    <filter
+                        name="theatre"
+                        string="Théâtre"
+                        domain="[('course_id.bloc_ids.speciality_id.domain_id', 'ilike','THEATRE')]"
+                    />
+                </search>
+            </field>
+        </record>
+
         <record id="action_prerequisit_list" model="ir.actions.act_window">
             <field name="name">Prerequisits</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">school.prerequisit</field>
-
             <field name="view_mode">tree</field>
+            <field name="context">{"search_default_current":1}</field>
+            <field name="search_view_id" ref="view_prerequisit_filter" />
         </record>
+
+
 
         <record id="action_prerequisit_tree_view1" model="ir.actions.act_window.view">
             <field name="sequence" eval="1" />
@@ -52,11 +94,11 @@
         </record>
 
         <menuitem
-        id="menu_prerequisit_list"
-        parent="school_management.menu_main_program"
-        action="action_prerequisit_list"
-        sequence="150"
-    />
+            id="menu_prerequisit_list"
+            parent="school_management.menu_main_program"
+            action="action_prerequisit_list"
+            sequence="150"
+        />
 
         <!-- Corequisits List View -->
         <record id="view_corequisit_list" model="ir.ui.view">
@@ -71,12 +113,52 @@
             </field>
         </record>
 
+        <record id="view_corequisit_filter" model="ir.ui.view">
+            <field name="name">corequisit.select</field>
+            <field name="model">school.corequisit</field>
+            <field name="arch" type="xml">
+                <search string="Search Corequisit">
+                    <field
+                        name="name"
+                        filter_domain="['|',('course_id.name','ilike',self),('course_id.uid','ilike',self)]"
+                    />
+                    <filter
+                        string="Current Year"
+                        name="current"
+                        domain="[('course_id.bloc_ids.year_sequence','=','current')]"
+                    />
+                    <filter
+                        string="Previous Year"
+                        name="previous"
+                        domain="[('course_id.bloc_ids.year_sequence','=','previous')]"
+                    />
+                    <filter
+                        string="Next Year"
+                        name="next"
+                        domain="[('course_id.bloc_ids.year_sequence','=','next')]"
+                    />
+                    <separator />
+                    <filter
+                        name="music"
+                        string="Musique"
+                        domain="[('course_id.bloc_ids.speciality_id.domain_id', 'ilike','MUSIQUE')]"
+                    />
+                    <filter
+                        name="theatre"
+                        string="Théâtre"
+                        domain="[('course_id.bloc_ids.speciality_id.domain_id', 'ilike','THEATRE')]"
+                    />
+                </search>
+            </field>
+        </record>
+
         <record id="action_corequisit_list" model="ir.actions.act_window">
             <field name="name">Corequisits</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">school.corequisit</field>
-
             <field name="view_mode">tree</field>
+            <field name="context">{"search_default_current":1}</field>
+            <field name="search_view_id" ref="view_corequisit_filter" />
         </record>
 
         <record id="action_corequisit_tree_view1" model="ir.actions.act_window.view">
@@ -87,11 +169,11 @@
         </record>
 
         <menuitem
-        id="menu_corequisit_list"
-        parent="school_management.menu_main_program"
-        action="action_corequisit_list"
-        sequence="160"
-    />
+            id="menu_corequisit_list"
+            parent="school_management.menu_main_program"
+            action="action_corequisit_list"
+            sequence="160"
+        />
 
         <!-- Add evaluation to Individual Course form view -->
         <record id="course_prerequisit_form" model="ir.ui.view">
