--- a/school_valuations/views/valuations_view.xml
+++ b/school_valuations/views/valuations_view.xml
@@ -216,6 +216,22 @@
           <field name="responsible_id" string="Responsible" />
           <field name="student_id" string="Student" />
           <filter
+              name="draft"
+              string="Draft"
+              domain="[('state', 'in', ['draft'])]"
+          />
+          <filter
+              name="published"
+              string="Published"
+              domain="[('state', 'not in', ['draft'])]"
+          />
+          <filter
+              string="Archived"
+              name="inactive"
+              domain="[('active','=',False)]"
+          />
+          <separator />
+          <filter
                     name="my_val"
                     string="Mes valorisations"
                     domain="[('responsible_uid','=',uid),('state','!=','0_valuated'),('state','!=','3_rejected')]"
