--- a/school_program_approuval/views/school_program_approuval_view.xml
+++ b/school_program_approuval/views/school_program_approuval_view.xml
@@ -268,6 +268,14 @@
       <field name="arch" type="xml">
         <search string="Search Program_approuval">
           <field name="name" filter_domain="[('name', 'ilike',self)]" />
+          <filter string="Draft" name="draft" domain="[('state','=','draft')]" />
+          <filter string="Active" name="active" domain="[('state','=','active')]" />
+          <filter
+                    string="Archived"
+                    name="archived"
+                    domain="[('state','=','archived')]"
+                />
+          <separator />
           <filter
                     string="Current Year"
                     name="current"
@@ -284,13 +292,6 @@
                     domain="[('year_sequence','=','next')]"
                 />
           <separator />
-          <filter string="Draft" name="draft" domain="[('state','=','draft')]" />
-          <filter string="Active" name="active" domain="[('state','=','active')]" />
-          <filter
-                    string="Archived"
-                    name="archived"
-                    domain="[('state','=','archived')]"
-                />
           <searchpanel>
             <field name="state" icon="fa-users" enable_counters="1" />
           </searchpanel>
