Fix students individual cycles menu title

--- a/school_management/views/individual_program_view.xml
+++ b/school_management/views/individual_program_view.xml
@@ -348,7 +348,7 @@
     </record>
 
     <record id="action_individual_program_form" model="ir.actions.act_window">
-        <field name="name">Individual Programs</field>
+        <field name="name">Students Invidivdual Cycles</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">school.individual_program</field>
 
