--- a/school_management/views/individual_program_view.xml
+++ b/school_management/views/individual_program_view.xml
@@ -301,6 +301,22 @@
                 />
                 <separator />
                 <filter
+                    string="Current Year"
+                    name="current"
+                    domain="[('bloc_ids.year_sequence','=','current')]"
+                />
+                <filter
+                    string="Previous Year"
+                    name="previous"
+                    domain="[('bloc_ids.year_sequence','=','previous')]"
+                />
+                <filter
+                    string="Next Year"
+                    name="next"
+                    domain="[('bloc_ids.year_sequence','=','next')]"
+                />
+                <separator />
+                <filter
                     name="music"
                     string="Musique"
                     domain="[('domain_id', '=', 1)]"
@@ -353,7 +369,7 @@
         <field name="res_model">school.individual_program</field>
 
         <field name="view_mode">tree,form</field>
-        <field name="context">{}</field>
+        <field name="context">{"search_default_current":1}</field>
         <field name="search_view_id" ref="view_individual_program_filter" />
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">
