--- a/school_management/views/res_partner_view.xml
+++ b/school_management/views/res_partner_view.xml
@@ -97,6 +97,7 @@
                                 <field name='employee' />
                                 <field name='lastname' />
             					<field name='firstname' />
+                                <field name="second_first_name" string="Autre(s) prénom(s)" />
                                 <field
                                 name="function"
                                 placeholder="e.g. Sales Director"
@@ -350,8 +351,8 @@
             				    <field name="title" options="{&quot;no_open&quot;: True}" />
             				    <field name="lang" />
             				    <field name="gender" />
-                                <field name="nationality_ids" widget="many2many_tags" />
-                                <field name="birthcountry" />
+                                <field name="nationality_ids" widget="many2many_tags" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" />
+                                <field name="birthcountry" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" />
             				  </group>
             				  <group>
                                 <field name="birthplace" />
@@ -361,11 +362,125 @@
             				  </group>
             				</group>
             			</page>
+                        <page name="access_titles_page" string="Titres d'accès" groups="school_management.group_employee">
+                            <group>
+                                <field name="admission_exam_date" />
+                                <field name="access_titles_ids" mode="tree">
+                                    <tree>
+                                        <field name="name" />
+                                        <field name="title" />
+                                        <field name="establishment" />
+                                        <field name="city" />
+                                        <field name="country_id" />
+                                        <field name="date" />
+                                        <field name="type" />
+                                        <field name="country" />
+                                    </tree>
+                                </field>
+                            </group>
+                        </page>
+
+                        <page name="erasmus_page" string="Divers" groups="school_management.group_employee">
+                            <group>
+                                <field name="memoir_titles_ids">
+                                    <tree>
+                                        <field name="name" />
+                                    </tree>
+                                </field>
+                                <field name="internships_ids" mode="tree">
+                                    <tree>
+                                        <field name="establishment" />
+                                        <field name="city" />
+                                        <field name="country_id" />
+                                        <field name="start_date" />
+                                        <field name="end_date" />
+                                        <field name="country" />
+                                    </tree>
+                                </field>
+                                <field name="erasmus_ids" mode="tree">
+                                    <tree>
+                                        <field name="establishment" />
+                                        <field name="city" />
+                                        <field name="country_id" />
+                                        <field name="start_date" />
+                                        <field name="end_date" />
+                                        <field name="language" />
+                                        <field name="country" />
+                                    </tree>
+                                </field>
+                            </group>
+                        </page>
             		</notebook>
                 </xpath>
             </field>
         </record>
 
+        <!-- Vue du form d'un titre d'accèss -->
+        <record id="view_access_title_form" model="ir.ui.view">
+            <field name="name">custom_partner_fields.access_title.form</field>
+            <field name="model">custom_partner_fields.access_title</field>
+            <field eval="8" name="priority" />
+            <field name="arch" type="xml">
+                <form string="Titre d'accès">
+                    <sheet>
+                    <group col="2">
+                        <field name="name" />
+                        <field name="title" />
+                        <field name="establishment" />
+                        <field name="city" />
+                        <field name="country_id" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" />
+                        <field name="date" />
+                        <field name="type" />
+                    </group>
+                    </sheet> 
+                </form>
+            </field>
+        </record>
+
+        <!-- Vue du form d'un erasmus -->
+        <record id="view_erasmus_form" model="ir.ui.view">
+            <field name="name">custom_partner_fields.erasmus.form</field>
+            <field name="model">custom_partner_fields.erasmus</field>
+            <field eval="8" name="priority" />
+            <field name="arch" type="xml">
+                <form string="Erasmus">
+                    <sheet>
+                    <group col="2">
+                        <field name="establishment" />
+                        <field name="city" />
+                        <field name="country_id" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" />
+                        <field name="start_date" />
+                        <field name="end_date" />
+                        <field name="language" />
+                        <field name="country" />
+                    </group>
+                    </sheet> 
+                </form>
+            </field>
+        </record>
+
+        <!-- Vue du form d'un stage -->
+        <record id="view_internship_form" model="ir.ui.view">
+            <field name="name">custom_partner_fields.internship.form</field>
+            <field name="model">custom_partner_fields.internship</field>
+            <field eval="8" name="priority" />
+            <field name="arch" type="xml">
+                <form string="Stage">
+                    <sheet>
+                    <group col="2">
+                        <field name="establishment" />
+                        <field name="city" />
+                        <field name="country_id" options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}" />
+                        <field name="start_date" />
+                        <field name="end_date" />
+                        <field name="country" />
+                    </group>
+                    </sheet> 
+                </form>
+            </field>
+        </record>
+
+       
         <!-- Top menu item -->
         <menuitem
         name="Contacts"
@@ -759,76 +874,6 @@
         action="action_archived_form"
         sequence="99"
     />
-
-    <!-- custom_partner_fields -->
-    <record id="view_partners_custom_fields" model="ir.ui.view">
-        <field name="name">view.res.partner.form.school</field>
-        <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base.view_partner_form" />
-        <field name="arch" type="xml">
-            <xpath expr="//h1//field[@name='name']/.." position="after">
-                <field name="second_first_name" string="Autre(s) prénom(s)" />
-            </xpath>
-        </field>
-    </record>
-
-    <record id="view_student_form_school_pages" model="ir.ui.view">
-        <field name="name">view.res.partner.form.school.pages</field>
-        <field name="model">res.partner</field>
-        <field name="inherit_id" ref="school_management.view_partners_form_school" />
-        <field name="arch" type="xml">
-            <xpath expr="//notebook[last()]" position="inside">
-                <page name="access_titles_page" string="Titre d'accès" groups="school_management.group_employee">
-                    <group>
-                        <field name="admission_exam_date" />
-                        <field name="access_titles_ids" mode="tree">
-                            <tree>
-                                <field name="name" />
-                                <field name="title" />
-                                <field name="establishment" />
-                                <field name="city" />
-                                <field name="country_id" />
-                                <field name="date" />
-                                <field name="type" />
-                                <field name="country" />
-                            </tree>
-                        </field>
-                    </group>
-                </page>
-
-                <page name="erasmus_page" string="Divers" groups="school_management.group_employee">
-                    <group>
-                        <field name="memoir_titles_ids">
-                            <tree>
-                                <field name="name" />
-                            </tree>
-                        </field>
-                        <field name="internships_ids" mode="tree">
-                            <tree>
-                                <field name="establishment" />
-                                <field name="city" />
-                                <field name="country_id" />
-                                <field name="start_date" />
-                                <field name="end_date" />
-                                <field name="country" />
-                            </tree>
-                        </field>
-                        <field name="erasmus_ids" mode="tree">
-                            <tree>
-                                <field name="establishment" />
-                                <field name="city" />
-                                <field name="country_id" />
-                                <field name="start_date" />
-                                <field name="end_date" />
-                                <field name="language" />
-                                <field name="country" />
-                            </tree>
-                        </field>
-                    </group>
-                </page>
-            </xpath>
-        </field>
-    </record>
 
 
 </odoo>
